adjusting css attributes for dialogue/portrait

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -14,14 +14,16 @@
 	
 	   		<div class="textbox">                
 	
-	   			<h1>
+	   			<p>
 	   			 <a class="typewrite" data-period="2000" data-type='[ "I ain`t living off tea and peanut butter no more!" ]'> 
 	   			 <span class="wrap"></span>
 	 			 </a>
-	 			 </h1>
+	 			 </p>
 	     			
 	   	 </div>
 	   	 
 	</div>
+	
+	<script src="/js/textbox.js"></script>
 </body>
 </html>
