found transparency editor, adding images to demo page

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -15,13 +15,15 @@
 	   		<div class="textbox">                
 	
 	   			<p>
-	   			 <a class="typewrite" data-period="2000" data-type='[ "I ain`t living off tea and peanut butter no more!" ]'> 
+	   			 <a class="typewrite" data-period="2000" data-type='[ "Word is ringing out from the city..." ]'> 
 	   			 <span class="wrap"></span>
 	 			 </a>
-	 			 </p>
-	     			
+	 			 </p>	
 	   	 </div>
-	   	 
+	</div>
+	
+	<div class="container-villagers">
+		<img src="../images/placeholder/villagers-reversed-tpt.png"></img>
 	</div>
 	
 	<script src="/js/textbox.js"></script>
