new css created, images adjusted, transparent versions created

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<link rel="stylesheet" type="text/css" href="../css/dialogueBox.css" />
+	<link rel="stylesheet" type="text/css" href="../css/village.gathering-style.css" />
 	<title>UI demo test bed</title>
 </head>
 <body>
@@ -9,7 +9,7 @@
 	
 	<div class="dialogue_box">                                          
 	   <div class="portrait">
-	   		<img src="/images/placeholder/whm.jpg" height="150"></img>
+	   		<img src="/images/placeholder/whm-portrait-tpt.png" height="150"></img>
 	   </div>
 	
 	   		<div class="textbox">                
@@ -23,7 +23,7 @@
 	</div>
 	
 	<div class="container-villagers">
-		<img src="../images/placeholder/villagers-reversed-tpt.png"></img>
+		<img id="villagers" src="../images/placeholder/villagers-reversed-tpt.png"></img>
 	</div>
 	
 	<script src="/js/textbox.js"></script>
