priest added to demo w/ transparency, flexbox

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -23,6 +23,7 @@
 	</div>
 	
 	<div class="container-villagers">
+		<img id="priest" src="../images/placeholder/whm-full-tpt.png"></img>
 		<img id="villagers" src="../images/placeholder/villagers-reversed-tpt.png"></img>
 	</div>
 	
