mock-up of intro scene in place

--- a/src/main/resources/static/demo.html
+++ b/src/main/resources/static/demo.html
@@ -9,7 +9,7 @@
 	
 	<div class="dialogue_box">                                          
 	   <div class="portrait">
-	   		<img src="/images/placeholder/whm-portrait-tpt.png" height="150"></img>
+	   		<img id="priest-portrait" src="/images/placeholder/whm-portrait-tpt.png" height="150"></img>
 	   </div>
 	
 	   		<div class="textbox">                
