placeholder art for ruins.corridor implemented

--- a/src/main/resources/static/ruins.corridor.html
+++ b/src/main/resources/static/ruins.corridor.html
@@ -5,8 +5,9 @@
 <link rel="stylesheet" type="text/css" href="/css/ruins.corridor-style.css" />
 </head>
 <body>
-	<div>
+	<div class = "img-container">
 		<img id="squire" src="/images/placeholder/squire-full-tpt.png"></img>
+		<img id="gladis" src="/images/placeholder/runeknight-gladis-full-tpt.png"></img>
 	</div>
 </body>
 </html>
